--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
   "files.associations": {
     "iostream": "cpp",
     "string": "cpp",
-    "format": "cpp"
+    "format": "cpp",
+    "ostream": "cpp"
   }
 }
